# th-backend

./: LICENSE  pyproject.toml
backend/: settings.py  urls.py
posts/: models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
